# solid

./: .dockerignore  .editorconfig  .envrc  .gitignore  .golangci.yml  .wwhrd.yml  BUILD  CODE_OF_CONDUCT.md  LICENSE  Makefile  NOTICE.txt  README.md  WORKSPACE  doc.go  go.mod  go.sum  go_repositories.bzl  mage.go  magefile.go  tools.go
.devcontainer/: Dockerfile  devcontainer.json
api/: Taskfile.yml
api/oidc/: const.go
api/oidc/core/v1/: BUILD.bazel  client.pb.go  client_api.pb.go  client_api_grpc.pb.go  core.pb.go  core_api.pb.go  core_api_grpc.pb.go  enums.pb.go  error.pb.go  error.pb.json.go  error_vtproto.pb.go  introspection_api.pb.go  introspection_api_grpc.pb.go  resource.pb.go  revocation_api.pb.go  revocation_api_grpc.pb.go  session.pb.go  token.pb.go  token_grant.pb.go
api/oidc/discovery/v1/: BUILD.bazel  discovery.pb.go  resource.pb.go  resource.pb.json.go  resource_vtproto.pb.go  server.pb.go  server.pb.json.go  server_vtproto.pb.go
client/: BUILD.bazel  api.go  claims.go  http.go
cmd/assertionbuilder/: main.go
cmd/client/: main.go
cmd/server/: go.mod  go.sum  main.go
doc/: README.md  dependencies.asciidoc
examples/assertionbuilder/: main.go
examples/attestationclient/: main.go
examples/attestationserver/: main.go
examples/authorizationserver/: BUILD.bazel  main.go  settings.go
examples/authorizationserver/handlers/: authorization.go  device_authorization.go  device_validation.go  helpers.go  jwks.go  metadata.go  par.go  token.go  token_introspection.go  token_revocation.go
examples/authorizationserver/middleware/: client_auth.go  secure_headers.go
examples/authorizationserver/respond/: helpers.go
examples/aws-lambda/: go.mod  go.sum  main.go
examples/client/: main.go
examples/deviceclient/: main.go
examples/resourceserver/: main.go  middleware.go
examples/server/: BUILD.bazel  README.md  go.mod  go.sum  main.go  settings.go
examples/server/handlers/: BUILD.bazel  authorization.go  dcr.go  device.go  device_authorization.go  device_validation.go  discovery.go  helpers.go  introspection.go  jwks.go  metadata.go  par.go  revocation.go  token.go  token_introspection.go  token_revocation.go
examples/server/middleware/: BUILD.bazel  adapter.go  basicauth.go  client.go  client_auth.go
internal/services/: api.go
oidc/: BUILD.bazel  const.go
pkg/authorization/: api.go  default.go  default_test.go
pkg/authorizationserver/: builder.go  options.go
pkg/client/: api.go  claims.go  client.go  http.go  private_key_jwt.go  private_key_jwt_test.go
pkg/clientauthentication/: api.go  context.go  context_test.go  mtls.go  private_key_jwt.go  private_key_jwt_test.go
pkg/dpop/: proof.go  proof_test.go  prover.go  verifier.go
pkg/generator/: api.go  authorization_code.go  authorization_code_test.go  device_user_code.go  token.go
pkg/jarm/: api.go  jwt_decoder.go  jwt_encoder.go
pkg/jwk/: api.go  signature.go
pkg/jwsreq/: api.go  jwt_decoder.go  jwt_encoder.go  jwt_test.go
pkg/mtls/: server.go
pkg/pkce/: verifier.go
pkg/profile/: api.go  client.go  profile_strict.go  server.go
pkg/reactor/: api.go  default.go  default_test.go
pkg/request/: api.go  jwt.go  jwt_decoder.go  jwt_encoder.go  jwt_test.go
pkg/rfcerrors/: builder.go  errors.go
pkg/storage/: api.go
pkg/token/: api.go  default.go
pkg/types/: compare.go  compare_test.go  null.go  string_array.go
proto/: buf.gen.yaml
sdk/dpop/: BUILD.bazel  api.go  options.go  prover.go  prover_test.go  url.go  verifier.go  verifier_test.go
sdk/dpop/mock/: BUILD.bazel
sdk/generator/: BUILD.bazel  api.go  authorization_code_test.go  device_code.go  device_code_test.go  device_user_code.go  request_uri.go
sdk/generator/mock/: BUILD.bazel
sdk/jarm/: BUILD.bazel  api.go  decoder.go  decoder_test.go  encoder.go  encoder_test.go
sdk/jwk/: BUILD.bazel  api.go  signature.go
sdk/jwsreq/: BUILD.bazel  api.go  decoder.go  decoder_test.go  encoder.go  encoder_test.go
sdk/jwsreq/mock/: BUILD.bazel
sdk/pairwise/: BUILD.bazel  api.go  hash.go  hash_test.go
sdk/pkce/: BUILD.bazel  verifier.go
sdk/randomness/: global.go  global_test.go  locked_rand.go  locked_rand_test.go  reader_test.go  source.go
sdk/rfcerrors/: BUILD.bazel  builder.go  errors.go
sdk/token/: BUILD.bazel  access_token.go  access_token_test.go  api.go  client_assertion.go  client_assertion_test.go  encrypted.go  helpers.go  introspection.go  introspection_test.go  refresh_token.go  refresh_token_test.go  token.go
sdk/token/cwt/: BUILD.bazel  builders.go  signer.go
sdk/token/jwt/: BUILD.bazel  builders.go  embedded_verifier.go  signer.go  signer_test.go  token_adapter.go  verifier.go  verifier_test.go
sdk/token/mock/: BUILD.bazel
sdk/token/paseto/: BUILD.bazel  signer.go  signer_test.go
sdk/token/verifiable/: api.go  helpers.go  options.go  uuid.go  uuid_test.go  verifiable.go
sdk/types/: BUILD.bazel  null.go  null_test.go  pointers.go
server/clientauthentication/: BUILD.bazel  api.go  client_attestation.go  context.go  context_test.go  private_key_jwt.go  private_key_jwt_test.go
server/clientauthentication/mock/: BUILD.bazel
server/profile/: BUILD.bazel  api.go  client.go  profile_strict.go
server/profile/mock/: BUILD.bazel
server/services/: BUILD.bazel  (+1 more)
server/services/authorization/: BUILD.bazel  service.go  service_internal_test.go  service_test.go
server/services/device/: BUILD.bazel  service.go  service_test.go
server/services/token/: BUILD.bazel  generator.go  grant_authorization_code.go  grant_authorization_code_test.go  grant_client_credentials.go  grant_client_credentials_test.go  grant_device_code.go  grant_device_code_test.go  grant_refresh_token.go  grant_refresh_token_test.go  grant_token_exchange.go  introspection.go  introspection_test.go  revoke.go  revoke_test.go  service.go  service_test.go  validator.go
server/storage/inmemory/: BUILD.bazel  authorization_code_session.go  authorization_request.go  client.go  device_code_session.go  proof.go  resource.go  token.go
server/storage/mock/: BUILD.bazel
tools/: doc.go  go.mod  magefile.go  tools.go
(+257 files in other folders)
