load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "api.go",
        "claims.go",
        "http.go",
    ],
    importpath = "zntr.io/solid/client",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//api/oidc/discovery/v1:discovery",
        "//oidc",
        "//sdk/dpop",
        "//sdk/jwsreq",
        "//sdk/pkce",
        "//sdk/types",
        "@com_github_dchest_uniuri//:uniuri",
        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
        "@in_gopkg_square_go_jose_v2//jwt",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
