load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "main.go",
        "settings.go",
    ],
    importpath = "zntr.io/solid/examples/server",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/server/handlers",
        "//examples/server/middleware",
        "//sdk/dpop",
        "//sdk/generator",
        "//sdk/jarm",
        "//sdk/jwk",
        "//sdk/pairwise",
        "//sdk/token",
        "//sdk/token/jwt",
        "//server/services/authorization",
        "//server/services/device",
        "//server/services/token",
        "//server/storage/inmemory",
        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
