load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jarm",
    srcs = [
        "api.go",
        "decoder.go",
        "encoder.go",
    ],
    importpath = "zntr.io/solid/sdk/jarm",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//sdk/rfcerrors",
        "//sdk/token",
    ],
)

go_test(
    name = "jarm_test",
    srcs = [
        "decoder_test.go",
        "encoder_test.go",
    ],
    embed = [":jarm"],
    deps = [
        "//api/oidc/core/v1:core",
        "//sdk/rfcerrors",
        "//sdk/token",
        "//sdk/token/mock",
        "@com_github_golang_mock//gomock",
    ],
)
