load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "jwk",
    srcs = [
        "api.go",
        "signature.go",
    ],
    importpath = "zntr.io/solid/sdk/jwk",
    visibility = ["//visibility:public"],
    deps = [
        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
        "@in_gopkg_square_go_jose_v2//jwt",
    ],
)
