load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jwsreq",
    srcs = [
        "api.go",
        "decoder.go",
        "encoder.go",
    ],
    importpath = "zntr.io/solid/sdk/jwsreq",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//sdk/token",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_test(
    name = "jwsreq_test",
    srcs = [
        "decoder_test.go",
        "encoder_test.go",
    ],
    embed = [":jwsreq"],
    deps = [
        "//api/oidc/core/v1:core",
        "//oidc",
        "//sdk/token",
        "//sdk/token/mock",
        "//sdk/types",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)
