load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rfcerrors",
    srcs = [
        "builder.go",
        "errors.go",
    ],
    importpath = "zntr.io/solid/sdk/rfcerrors",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//sdk/types",
    ],
)
