load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "compare.go",
        "null.go",
        "pointers.go",
        "string_array.go",
    ],
    importpath = "zntr.io/solid/sdk/types",
    visibility = ["//visibility:public"],
)

go_test(
    name = "types_test",
    srcs = [
        "compare_test.go",
        "null_test.go",
        "string_array_test.go",
    ],
    embed = [":types"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
