load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = [
        "authorization.go",
        "device_authorization.go",
        "device_validation.go",
        "helpers.go",
        "jwks.go",
        "metadata.go",
        "par.go",
        "token.go",
        "token_introspection.go",
        "token_revocation.go",
    ],
    importpath = "zntr.io/solid/examples/server/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//api/oidc/discovery/v1:discovery",
        "//examples/server/middleware",
        "//oidc",
        "//sdk/dpop",
        "//sdk/jarm",
        "//sdk/jwk",
        "//sdk/jwsreq",
        "//sdk/pairwise",
        "//sdk/rfcerrors",
        "//sdk/token",
        "//sdk/token/jwt",
        "//sdk/types",
        "//server/clientauthentication",
        "//server/services",
        "//server/storage",
        "@com_github_dchest_uniuri//:uniuri",
        "@com_github_json_iterator_go//:go",
        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
    ],
)
