load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "adapter.go",
        "basic_auth.go",
        "client_auth.go",
        "secure_headers.go",
    ],
    importpath = "zntr.io/solid/examples/server/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//sdk/rfcerrors",
        "//sdk/types",
        "//server/clientauthentication",
        "//server/storage",
    ],
)
