load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = [
        "authorization_code.gen.go",
        "client_id.gen.go",
        "device_user_code.gen.go",
        "doc.go",
    ],
    importpath = "zntr.io/solid/sdk/generator/mock",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_mock//gomock"],
)
