load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = [
        "authorization.gen.go",
        "authorization_decoder.gen.go",
        "authorization_encoder.gen.go",
        "doc.go",
    ],
    importpath = "zntr.io/solid/sdk/jwsreq/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "@com_github_golang_mock//gomock",
    ],
)
