load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jwt",
    srcs = [
        "builders.go",
        "signer.go",
        "token_adapter.go",
        "verifier.go",
    ],
    importpath = "zntr.io/solid/sdk/token/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//sdk/jwk",
        "//sdk/token",
        "//sdk/types",
        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
        "@in_gopkg_square_go_jose_v2//jwt",
    ],
)

go_test(
    name = "jwt_test",
    srcs = [
        "signer_test.go",
        "verifier_test.go",
    ],
    embed = [":jwt"],
    deps = [
        "//sdk/jwk",
        "//sdk/token",
        "//sdk/types",
        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
    ],
)
