load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = [
        "doc.go",
        "generator.gen.go",
        "serializer.gen.go",
        "token.gen.go",
        "verifier.gen.go",
    ],
    importpath = "zntr.io/solid/sdk/token/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//sdk/token",
        "@com_github_golang_mock//gomock",
        "@com_github_golang_mock//mockgen/model",
    ],
)
