load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["authentication_processor.gen.go"],
    importpath = "zntr.io/solid/server/clientauthentication/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "@com_github_golang_mock//gomock",
    ],
)
