load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "token",
    srcs = [
        "generator.go",
        "grant_authorization_code.go",
        "grant_client_credentials.go",
        "grant_device_code.go",
        "grant_refresh_token.go",
        "grant_token_exchange.go",
        "introspection.go",
        "revoke.go",
        "service.go",
        "validator.go",
    ],
    importpath = "zntr.io/solid/server/services/token",
    visibility = ["//visibility:public"],
    deps = [
        "//api/oidc/core/v1:core",
        "//oidc",
        "//sdk/rfcerrors",
        "//sdk/token",
        "//sdk/types",
        "//server/services",
        "//server/storage",
        "@com_github_dchest_uniuri//:uniuri",
    ],
)

go_test(
    name = "token_test",
    srcs = [
        "grant_authorization_code_test.go",
        "grant_client_credentials_test.go",
        "grant_device_code_test.go",
        "grant_refresh_token_test.go",
        "introspection_test.go",
        "revoke_test.go",
        "service_test.go",
    ],
    embed = [":token"],
    deps = [
        "//api/oidc/core/v1:core",
        "//oidc",
        "//sdk/rfcerrors",
        "//sdk/token/mock",
        "//sdk/types",
        "//server/storage",
        "//server/storage/mock",
        "@com_github_dchest_uniuri//:uniuri",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)
