load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "client.pb.go",
        "client_api.pb.go",
        "client_api_grpc.pb.go",
        "core.pb.go",
        "core_api.pb.go",
        "core_api_grpc.pb.go",
        "enums.pb.go",
        "error.pb.go",
        "introspection_api.pb.go",
        "introspection_api_grpc.pb.go",
        "resource.pb.go",
        "revocation_api.pb.go",
        "revocation_api_grpc.pb.go",
        "session.pb.go",
        "token.pb.go",
        "token_grant.pb.go",
    ],
    importpath = "zntr.io/solid/api/oidc/core/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
